[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Controllers/PlayerController.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Effects/Bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Guns/Revolver.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="CapsuleShape" id=2]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1, 0.332977, 1 )

[node name="Player" type="KinematicBody" groups=[
"Player",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.0434, 0 )
script = ExtResource( 1 )
bullet = ExtResource( 2 )

[node name="BodyMesh" type="MeshInstance" parent="."]
transform = Transform( 0.5, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
visible = false
cast_shadow = 3
mesh = SubResource( 1 )
material/0 = null

[node name="BodyCollission" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 2 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.24561, -0.455538 )

[node name="Camera" type="Camera" parent="Head"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.480933 )
fov = 90.0

[node name="revolver" parent="Head/Camera" instance=ExtResource( 3 )]
transform = Transform( -0.1, 0, -3.89414e-08, 0, 0.1, 0, 3.89414e-08, 0, -0.1, 0.2, -0.3, -0.2 )

[node name="Position3D" type="Position3D" parent="Head/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.737716 )

[node name="Feet" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.29082, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Feet"]
shape = SubResource( 3 )

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.2
[connection signal="body_entered" from="Feet" to="." method="_on_Feet_body_entered"]
[connection signal="body_exited" from="Feet" to="." method="_on_Feet_body_exited"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
